# MotorTest

./: .gitattributes  .gitignore  Dockerfile  build.sh  pixi.toml
.github/workflows/: docker-build.yml
auv_vision/: .gitattributes  CMakeLists.txt  package.xml
auv_vision/auv_vision/: camera_node.py
auv_vision/auv_vision.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
auv_vision/include/: NvInferVersion.h
auv_vision/src/: camera_node.cpp  detection_node.cpp
auv_vision_legacy/: package.xml  setup.py
auv_vision_legacy/auv_vision/: detection_node.py
auv_vision_legacy/auv_vision.egg-info/: PKG-INFO
launching/: package.xml  setup.cfg  setup.py
launching/launch/: launch_node.py
pixhawk_packages/: package.xml  setup.cfg  setup.py
pixhawk_packages/pixhawk_packages/: IMU_node.py  auv_controller_node.py  motor_node_alt_hold.py  motor_node_guided.py  motor_node_manual.py  movement_node.py  publish_rc.py  state_monitor.py  state_node.py  teleop.py
practice_C/: .talker.cpp.swp  CMakeLists.txt  package.xml
testing_package/: package.xml  setup.cfg  setup.py
testing_package/testing_package/: testing_node.py
testing_stuff/: package.xml  setup.cfg  setup.py
testing_stuff/testing_stuff/: aligning_test.py  basic_test.py  depth_hold_test.py  mission_node.py  motor_test_3.py  motor_test_4.py  motor_test_GUIDED.py  motor_test_alt_hold.py  square_pattern_test.py
